<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/image"
        android:padding="20dp">

    <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_baseline_lock_white"
            android:contentDescription="@string/btn_lbl_login" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="true"
            android:textSize="25sp"
            android:textColor="@color/white"/>

    <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:text="Enter registered Email Address "
            android:textSize="25sp"/>

    <EditText
            android:id="@+id/forgot_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:drawableStart="@drawable/ic_baseline_email2_24"
            android:drawablePadding="10dp"
            android:hint="@string/et_hint_email_id"
            android:background="@color/white"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
    />
    <Button
            android:id="@+id/forgot_send_link_btn"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorThemePink"
            android:text="Send Reset Link"/>
    <Button
            android:id="@+id/Cancel_btn"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorThemePink"
            android:text = "Cancel"/>

</LinearLayout>