<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity"
        android:background="@drawable/image">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp"
            android:layout_marginTop="60dp"
            android:clipToPadding="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center_horizontal"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.424">


        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/create_an_account"
                android:paddingLeft="5sp"
                android:textColor="@color/white"
                android:textSize="@dimen/title_textSize"/>
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_email_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_hint_email_id"
                    android:background="@color/white"
                    android:inputType="textEmailAddress"
                    android:drawableStart="@drawable/ic_baseline_email2_24"
                    android:drawablePadding="@dimen/et_textSize"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_create_password_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="#000000">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Password"
                    android:background="@color/white"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/ic_baseline_lock2_24"
                    android:drawablePadding="10dp"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_confirm_password_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_hint_confirm_password"
                    android:background="@color/white"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/ic_baseline_lock2_24"
                    android:drawablePadding="10dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/register_emp_btn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/register"
                android:paddingVertical="15dp"
                android:paddingBottom="@dimen/btn_padding"
                android:textAllCaps="false"
                android:backgroundTint="@color/colorThemePink"
                android:textColor="@color/white"
                android:textSize="@dimen/btn_textSize"/>


        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_gravity="center">
            <TextView
                    android:id="@+id/tv_don_t_have_an_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/clickable_text_view_padding"
                    android:layout_marginEnd="5dp"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/black"
                    android:textSize="@dimen/lbl_text_view_textSize"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_lbl_login"
                    android:textSize="26dp"
                    android:textColor="@color/white"
                    android:onClick="openLoginActivity"/>

        </LinearLayout>

        <ProgressBar
                android:id="@+id/login_progress_bar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:visibility="invisible"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
