<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PaymentActivity">
    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent" android:layout_height="57dp"
            android:background="@color/purple_700"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
            <ImageView
                    android:id="@+id/backarrow"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_baseline_arrow_back"
                    android:layout_gravity="center"
            />

            <TextView android:layout_width="200dp"
                      android:layout_height="40dp"
                      android:id="@+id/cartTitle"
                      android:text="My Payment"
                      android:textStyle="bold"
                      android:textSize="25sp"
                      android:textColor="@color/white"
                      android:layout_marginTop="10dp"
                      android:layout_marginLeft="50dp"
                      android:fontFamily="serif"/>

        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>


    <androidx.cardview.widget.CardView
            android:id="@+id/pay_cash"
            android:layout_width="353dp"
            android:layout_height="92dp"
            app:cardCornerRadius="5dp"
            android:elevation="0dp"
            app:cardElevation="0dp"
            android:background="@color/white" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.166" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

            <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/paymentcash"
                    android:contentDescription="@string/cash_payment"/>

            <TextView
                    android:layout_width="180dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/cash_payment"
                    android:textSize="20sp"
                    android:textColor="@color/text_dark_color"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
            android:id="@+id/pay_cardpay"
            android:layout_width="353dp"
            android:layout_height="74dp"
            app:cardCornerRadius="5dp"
            android:elevation="0dp"
            app:cardElevation="0dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/pay_cash"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

            <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/credit"
                    android:contentDescription="@string/cash_payment"/>

            <TextView
                    android:layout_width="190dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/credit_or_debit_card"
                    android:textSize="20sp"
                    android:textColor="@color/text_dark_color"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
            android:id="@+id/pay_upi"
            android:layout_width="353dp"
            android:layout_height="67dp"
            app:cardCornerRadius="5dp"
            android:elevation="0dp"
            app:cardElevation="0dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/pay_cardpay"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
                android:layout_width="316dp"
                android:layout_height="48dp"
                android:layout_margin="15dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

            <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/upi"
                    android:contentDescription="@string/bhim_upi"/>

            <TextView
                    android:layout_width="180dp"
                    android:layout_height="50dp"
                    android:text="@string/bhim_upi"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="@color/text_dark_color"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <Button
            android:id="@+id/confirm_payment_btn"
            android:layout_width="247dp"
            android:layout_height="61dp"
            android:paddingLeft="25dp"
            android:text="@string/confirm_payment" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pay_upi" app:layout_constraintVertical_bias="0.199"
    />
</androidx.constraintlayout.widget.ConstraintLayout>